force-app/main/default/objects/Claim_Header__c/Claim_Header__c.object-meta.xml
<CustomObject>
    <label>Claim Header</label>
    <nameField>
        <displayFormat>CLH-{0000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Headers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>