force-app/main/default/objects/Claim_Header__c/fields/Actual_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Approved_Amount__c</fullName>
    <label>Actual Approved Amount</label>
    <summarizedField>Claim_Line_Item__c.Approved_Amount__c</summarizedField>
    <summaryForeignKey>Claim_Line_Item__c.Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>