force-app/main/default/objects/Claim_Header__c/fields/Approved_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approved_Comment__c</fullName>
    <label>Approved Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>