force-app/main/default/objects/Claim_Header__c/fields/ASM__c.field-meta.xml
<CustomField>
    <fullName>ASM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claim_Headers5</relationshipName>
    <type>Lookup</type>
</CustomField>