force-app/main/default/objects/Claim_Header__c/fields/ASM_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>ASM_Approved_Date__c</fullName>
    <label>L1 Approved Date</label>
    <type>Date</type>
</CustomField>