force-app/main/default/objects/Claim_Header__c/fields/Claim_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Action_Date__c</fullName>
    <label>Claim Action Date</label>
    <type>Date</type>
</CustomField>