force-app/main/default/objects/Claim_Header__c/fields/Commerical_Head_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Commerical_Head_Approved_Date__c</fullName>
    <label>Commerical Head Approved Date</label>
    <type>Date</type>
</CustomField>