force-app/main/default/objects/Claim_Header__c/fields/Commerical_Head_User__c.field-meta.xml
<CustomField>
    <fullName>Commerical_Head_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commerical Head User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claim_Headers6</relationshipName>
    <type>Lookup</type>
</CustomField>