force-app/main/default/objects/Claim_Header__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claim Headers</relationshipLabel>
    <relationshipName>Claim_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>