force-app/main/default/objects/Claim_Header__c/fields/Head_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Head_Approved_Date__c</fullName>
    <label>L5 Approved Date</label>
    <type>Date</type>
</CustomField>