force-app/main/default/objects/Claim_Header__c/fields/Head_User__c.field-meta.xml
<CustomField>
    <fullName>Head_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L5</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claim_Headers8</relationshipName>
    <type>Lookup</type>
</CustomField>