force-app/main/default/objects/Claim_Header__c/fields/MIS_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>MIS_Approved_Date__c</fullName>
    <label>L4  Approved Date</label>
    <type>Date</type>
</CustomField>