force-app/main/default/objects/Claim_Header__c/fields/MIS_User__c.field-meta.xml
<CustomField>
    <fullName>MIS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claim_Headers2</relationshipName>
    <type>Lookup</type>
</CustomField>