force-app/main/default/objects/Claim_Header__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>