force-app/main/default/objects/Claim_Header__c/fields/RSM__c.field-meta.xml
<CustomField>
    <fullName>RSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claim_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>