force-app/main/default/objects/Claim_Header__c/fields/RSM_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>RSM_Approved_Date__c</fullName>
    <label>L2 Approved Date</label>
    <type>Date</type>
</CustomField>