force-app/main/default/objects/Claim_Header__c/fields/Sales_Manager_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Approval_Date__c</fullName>
    <label>Sales Manager Approval Date</label>
    <type>Date</type>
</CustomField>