force-app/main/default/objects/Claim_Header__c/fields/SO__c.field-meta.xml
<CustomField>
    <fullName>SO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claim_Headers4</relationshipName>
    <type>Lookup</type>
</CustomField>