force-app/main/default/objects/Claim_Header__c/fields/SO_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>SO_Approved_Date__c</fullName>
    <label>SO Approved Date</label>
    <type>Date</type>
</CustomField>