force-app/main/default/objects/Claim_Header__c/fields/Submitted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Amount__c</fullName>
    <label>Submitted Amount</label>
    <summarizedField>Claim_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Claim_Line_Item__c.Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>