force-app/main/default/objects/Claim_Header__c/fields/ZSM_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>ZSM_Approved_Date__c</fullName>
    <label>L3 Approved Date</label>
    <type>Date</type>
</CustomField>