force-app/main/default/objects/Claim_Header__c/fields/ZSM_User__c.field-meta.xml
<CustomField>
    <fullName>ZSM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claim_Headers7</relationshipName>
    <type>Lookup</type>
</CustomField>