force-app/main/default/objects/Claim_Header__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Submitted_Amount__c</columns>
    <columns>Distributor__c</columns>
    <columns>Month__c</columns>
    <columns>Status__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>